# zero-waste-pattern

./: .gitignore  Dockerfile  README.md  app.py  baseline_inference.py  example_usage.py  heuristic_baseline.py  inference.py  inference_scores.json  openenv.yaml  pyproject.toml  random_agent_rollout.py  requirements.txt
env/: __init__.py  fabric_env.py  fabric_space.py  openenv_wrapper.py
models/: __init__.py  action.py  observation.py  openenv_action.py  openenv_state.py  pattern_piece.py  reward.py  reward_config.py  state.py
server/: app.py
tasks/: __init__.py  base_task.py  basic_packing.py  industrial_mode.py  irregular_shapes.py
utils/: __init__.py  dataset.py  geometry.py  metrics.py  visualization.py
